# blackboxai-1743167236765

./: README.md
KsHealthcare/: CMakeLists.txt  INSTALL_QT.md  LICENSE  README.md  build.sh
KsHealthcare/include/: database.h  mainwindow.h  patient.h
KsHealthcare/src/: database.cpp  main.cpp  mainwindow.cpp  patient.cpp
KsHealthcare/ui/: patientform.ui
